tweak spacing, start trying to fix double count

--- a/src/containers/Question/Question.module.scss
+++ b/src/containers/Question/Question.module.scss
@@ -32,7 +32,7 @@
 
 .itemDescription {
   white-space: pre-line;
-  margin-bottom: $margin-2;
+  margin-bottom: $margin-1;
 }
 
 .itemMeta {
