--- a/src/containers/QuestionVote/QuestionVote.module.scss
+++ b/src/containers/QuestionVote/QuestionVote.module.scss
@@ -1,8 +1,8 @@
 @import '../../template.scss';
 
 .vote {
-  display: grid;
-  grid-gap: $margin-2;
+  display: flex;
+  flex-direction: column;
   font-size: $text-5;
   font-weight: 600;
   margin-right: $margin-3;
@@ -11,8 +11,13 @@
 
   svg {
     display: block;
-    margin: auto;
+    margin: $margin-2 auto;
     border-radius: 50%;
+  }
+
+  > * {
+    flex-shrink: 0;
+    margin: $margin-2 auto;
   }
 
   svg:not(.disabled):hover {
